--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Samantha Billips' Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="../Portfolio/portfolio.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio.css">
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
 </head>
 
@@ -27,7 +27,7 @@
 
     <!--Video-->
             <video autoplay muted loop id="code_Video">
-                <source src="../portfolio/code.mp4" type="video/mp4"> <!--May sub mp4 for other-->
+                <source src="/code.mp4" type="video/mp4"> <!--May sub mp4 for other-->
                 Your browser does not support HTML5 Video.
             </video>
         </div>
@@ -57,33 +57,33 @@
 
                     <div class="mySlides fade">
                         <div class="Slide_Number">1/6</div>
-                            <img class="Slide_Show_Images" src="../Portfolio/portfolioPic.jpg" style="width: 100%; height:auto;">
+                            <img class="Slide_Show_Images" src="/portfolioPic.jpg" style="width: 100%; height:auto;">
                                 <div class="text">I'd love to assist you on your project</div>
                         </div>
                     
                     <div class="mySlides fade">
                         <div class="Slide_Number">2/6</div>
-                            <img class="Slide_Show_Images" src="../Portfolio/HTML_CSS_and_JavaScript.jpeg" style="width:100%; height:auto;">
+                            <img class="Slide_Show_Images" src="/HTML_CSS_and_JavaScript.jpeg" style="width:100%; height:auto;">
                                 <div class="text">I'm a software developer,<br>trained in:<br>HTML,CSS,Javascript,</div>
                     </div>
                     <div class="mySlides fade">
                         <div class="Slide_Number">3/6</div>
-                            <img class="Slide_Show_Images" src="../Portfolio/Python.png" style="width:100%; height:auto;">
+                            <img class="Slide_Show_Images" src="/Python.png" style="width:100%; height:auto;">
                                 <div class="text">The popular programming language, Python,</div>
                     </div>
                     <div class="mySlides fade">
                         <div class="Slide_Number">4/6</div>
-                            <img class="Slide_Show_Images" src="../Portfolio//C_Sharp_and_Dot_NET.png" style="width:100%; height:auto;">
+                            <img class="Slide_Show_Images" src="/C_Sharp_and_Dot_NET.png" style="width:100%; height:auto;">
                                 <div class="text">C#, .NET Framework, ASP.net, MVC,</div>
                     </div>
                     <div class="mySlides fade">
                         <div class="Slide_Number">5/6</div>
-                            <img class="Slide_Show_Images" src="../Portfolio/SQL_and_Database.jpg" style="width:100%; height:auto;">
+                            <img class="Slide_Show_Images" src="/SQL_and_Database.jpg" style="width:100%; height:auto;">
                                 <div class="text">back end development, databases, and SQL.</div>
                     </div>
                     <div class="mySlides fade">
                         <div class="Slide_Number">6/6</div>
-                            <img class="Slide_Show_Images" src="../Portfolio/type.jpg" style="width:100%; height:auto;">
+                            <img class="Slide_Show_Images" src="/type.jpg" style="width:100%; height:auto;">
                                 <div class="text">
                                     <a onclick="openForm()" href="#Contact" style="color: white;">Contact me now!</a>
                                 </div>
@@ -111,7 +111,7 @@
     <!--About Section-->
         <div class="Row" id="About">
             <div class="Column_2"><!--left column. Potential layout change-->
-                <img src="../Portfolio/type.jpg" alt="prof"> <!--Replace with your img file-->
+                <img src="/type.jpg" alt="prof"> <!--Replace with your img file-->
             </div>
 
             <div class="column_1"><!--right column? may change-->
@@ -160,7 +160,7 @@
             </p>
         </footer>
 
-        <Script src="../portfolio/Portfolio.js"></Script>
+        <Script src="/Portfolio.js"></Script>
     
     </body>
 </html>
