Changes to color pallete and some text animation

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <!--Head-->
 <head>
     <meta charset="UTF-8">
-    <title>Samantha Billips' Portfolio</title>
+    <title>Samantha Billips | Front-End Developer</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-</head>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 <!--Body-->
     <body class="Background">
         
@@ -27,14 +27,14 @@
 
     <!--Video-->
             <video autoplay muted loop id="code_Video">
-                <source src="/code.mp4" type="video/mp4"> <!--May sub mp4 for other-->
+                <source src="code.mp4" type="video/mp4"> <!--May sub mp4 for other-->
                 Your browser does not support HTML5 Video.
             </video>
         </div>
 
     <!--Video text-->
         <div class="Video_text">
-            <h1 style="color: #fff;">Samantha Billips' Portfolio</h1>
+            <h1 style="color: #539987;">Samantha Billips || Front-End Developer</h1>
                 <p>
                     <strong>
                         <center>
@@ -85,7 +85,7 @@
                         <div class="Slide_Number">6/6</div>
                             <img class="Slide_Show_Images" src="type.jpg" style="width:100%; height:auto;">
                                 <div class="text">
-                                    <a onclick="openForm()" href="#Contact" style="color: white;">Contact me now!</a>
+                                    <a onclick="openForm()" href="#Contact" style="color: #ECE2D0;">Contact me now!</a>
                                 </div>
                             </div>
 
@@ -138,7 +138,7 @@
     <div id="Contact">
         <button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
             <div class="form-popup" id="myForm">
-	            <form action="https://formspree.io/info@learncodinganywhere.com" method="POST" class="form-container"> <!-- Here we are using a free online service from https://formspree.io/ to send our contact form to an email address of our choosing - note: it will not run unless live on the internet, you have to push it to your online website first -->
+	            <form action="https://formspree.io/f/xrgrodnk" method="POST" class="form-container"> <!-- Here we are using a free online service from https://formspree.io/ to send our contact form to an email address of our choosing - note: it will not run unless live on the internet, you have to push it to your online website first -->
             <h1>Contact</h2>
                     <label for="name"><b>Name</b></label>
                         <input type="text" placeholder="Please enter your name">
@@ -156,7 +156,7 @@
     <!--Footer section-->
         <footer>
             <p>
-                <center> &copy;Samantha Billips|<a href="https://github.com/SammieSunshine.github.io"</center>
+                <center> &copy;Samantha Billips|2021<a href="https://github.com/SammieSunshine.github.io"</center>
             </p>
         </footer>
 
