--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="column_1"><!--right column? may change-->
                 <h1>About Me</h1>
-                    <p>I'm a software developer who's always had a love of puzzles and problem solving! In my spare time, I enjoy discovering new recipes, new tunes that tickle the ear, and playing video games with my nephew.<br><br>I graduated from <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp. This is where I recieved hands on training and experience in the following web and programming languages: HTML, CSS,Javascript, SQL, C#, and more.<br><br> As a full-stack developer, I would love to work with you on your project! <a href="#Contact">Contact</a> me below!</p><!--Detail about self. Short, to point, maybe humor, passion-->
+                    <p>While mostly self-taught, I briefly participated in <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp where I recieved hands on training in HTML, CSS, Javascript, Jquery, Bootstrap, and Python.<br><br>  I would love to work with you on your project! <a href="#Contact">Contact</a> me below!</p><!--Detail about self. Short, to point, maybe humor, passion-->
             </div>
         </div>
 
@@ -156,7 +156,7 @@
     <!--Footer section-->
         <footer>
             <p>
-                <center> &copy;Samantha Billips|2021<a href="https://github.com/SammieSunshine.github.io"</center>
+                <center> &copy;Samantha Billips|2022<a href="https://github.com/SammieSunshine.github.io"</center>
             </p>
         </footer>
 
